fix: park secret-waiting jobs when a process instance is suspended
suspendJobs only emitted Job.SUSPENDED for ACTIVATABLE jobs. A job in
WAITING_FOR_SECRET_RESOLUTION could later be reactivated by secret
resolution and re-enter the hand-out index while the instance was still
suspended.

Park both suspendable states, matching JobSuspendedApplier and ADR D2.
Add a regression test that suspends while a job waits for secrets, lets
resolution complete, and asserts the job stays out of hand-out.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>